--- a/public/elements-list.html
+++ b/public/elements-list.html
@@ -4,7 +4,6 @@
 <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 
 <!-- Paper Elements -->
-<link rel="import" href="/bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-item/paper-item.html">
@@ -13,7 +12,8 @@
 
 <!-- Google Web Components -->
 <link rel="import" href="/bower_components/firebase-element/firebase-collection.html">
-<link rel="import" href="/bower_components/firebase-element/firebase-auth.html">
+<link rel="import" href="/bower_components/firebase-element/firebase-document.html">
 
 <!-- Custom Elements -->
 <link rel="import" href="/cover-editor/cover-editor.html">
+<link rel="import" href="/speaker-list.html">
