Safari, Edge etc. style binding compatibility; pinch implement; delete confirm dialog

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 		<template is="dom-bind" id="app">
 			<paper-header-panel>
 				<paper-toolbar>
-					<paper-icon-button icon="arrow-back" hidden="[[_isList(page)]]" on-tap="backToList"></paper-icon-button>
+					<paper-icon-button noink icon="arrow-back" hidden="[[_isList(page)]]" on-tap="backToList"></paper-icon-button>
 					<div class="title">IOH Cover Maker</div>
 				</paper-toolbar>
 				<iron-pages attr-for-selected="page-route" selected="{{page}}">
