--- a/public/cover-editor/hammer.html
+++ b/public/cover-editor/hammer.html
@@ -1,1 +1,1 @@
-<script src="/bower_components/hammerjs/hammer.min.js"></script>
+<script src="../bower_components/hammerjs/hammer.min.js"></script>
