--- a/public/elements-list.html
+++ b/public/elements-list.html
@@ -1,21 +1,24 @@
+<!-- All the html imports go here.
+     Vulcanize will inline the imports listed below and print the result to elements.html, to reduce HTTP requests for production. -->
+
 <!-- Iron Elements -->
-<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="bower_components/iron-pages/iron-pages.html">
 
 <!-- Paper Elements -->
-<link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
-<link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="/bower_components/paper-item/paper-icon-item.html">
-<link rel="import" href="/bower_components/paper-item/paper-item.html">
-<link rel="import" href="/bower_components/paper-item/paper-item-body.html">
-<link rel="import" href="/bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="bower_components/paper-item/paper-icon-item.html">
+<link rel="import" href="bower_components/paper-item/paper-item.html">
+<link rel="import" href="bower_components/paper-item/paper-item-body.html">
+<link rel="import" href="bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
 
 <!-- Google Web Components -->
-<link rel="import" href="/bower_components/firebase-element/firebase-collection.html">
-<link rel="import" href="/bower_components/firebase-element/firebase-document.html">
+<link rel="import" href="bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="bower_components/firebase-element/firebase-document.html">
 
 <!-- Custom Elements -->
-<link rel="import" href="/cover-editor/cover-editor.html">
-<link rel="import" href="/speaker-list.html">
+<link rel="import" href="cover-editor/cover-editor.html">
+<link rel="import" href="speaker-list.html">
