--- a/public/speaker-list.html
+++ b/public/speaker-list.html
@@ -1,8 +1,9 @@
-<link rel="import" href="/bower_components/polymer/polymer.html">
-<link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
-<link rel="import" href="/bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="/bower_components/paper-item/paper-item.html">
-<link rel="import" href="/bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="bower_components/paper-item/paper-item.html">
+<link rel="import" href="bower_components/firebase-element/firebase-collection.html">
+<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="speaker-list">
     <style include="iron-flex">
@@ -20,12 +21,12 @@
             color: var(--light-theme-secondary-color);
         }
 
-        paper-item {
+        paper-icon-item {
             border-bottom: 1px solid var(--light-theme-divider-color);
             cursor: pointer;
         }
 
-        paper-item:hover {
+        paper-icon-item:hover {
             background-color: var(--paper-grey-50);
         }
 
