--- a/public/cover-editor/cover-editor.html
+++ b/public/cover-editor/cover-editor.html
@@ -33,7 +33,7 @@
 			
 			overflow: hidden;
 		
-			font-family: "Helvetica", "Microsoft JhengHei", "Noto Sans";
+			@apply(--paper-font-common-base);
 			font-size: 16px;
 		}
 		
