Now <speaker-list> shows spinner when loading, and empty message while data doesn't exist; Remove html imports for proper dependency.

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
 							data="{{speakers}}"
 							order-by-child="name"
 							start-at="[[search]]"
-							end-at="[[_searchRange(search)]]"></firebase-collection>
+							end-at="[[_searchRange(search)]]"
+							on-firebase-value="_firebaseLoaded"></firebase-collection>
 						<speaker-list
 							speakers="{{speakers}}"
 							speaker-id="{{speakerId}}"
