--- a/public/speaker-list.html
+++ b/public/speaker-list.html
@@ -2,7 +2,10 @@
 <link rel="import" href="bower_components/paper-button/paper-button.html">
 <link rel="import" href="bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="bower_components/paper-item/paper-icon-item.html">
 <link rel="import" href="bower_components/paper-item/paper-item.html">
+<link rel="import" href="bower_components/paper-item/paper-item-body.html">
+<link rel="import" href="bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="bower_components/firebase-element/firebase-collection.html">
 <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
@@ -41,7 +44,9 @@
     </style>
 
     <template>
-        <p style="text-align: center" hidden="[[speakers.length]]">載入中…</p>
+        <paper-spinner style="display: flex; margin: 1em auto"
+                       hidden="[[speakers.length]]" active="[[!empty]]"></paper-spinner>
+        <p style="text-align: center" hidden="[[!empty]]">空空如也～快來建立第一個吧！</p>
 
         <template is="dom-repeat" items="[[speakers]]" as="speaker" role="listbox">
             <paper-icon-item data-key="[[speaker.__firebaseKey__]]">
@@ -85,6 +90,11 @@
                 },
                 delKey: {
                     type: String,
+                    notify: true
+                },
+                empty: {
+                    Boolean,
+                    value: false,
                     notify: true
                 }
             },
